// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagUser /> should render correctly 1`] = `
<Tag
  CustomImage={
    <Relay(Connect(UserAvatarLegacy))
      size={15}
      user={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "media": Object {
            "url": "url de l'image",
          },
        }
      }
    />
  }
  className="tagUser"
>
  <Relay(Connect(UserLink))
    user={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "media": Object {
          "url": "url de l'image",
        },
      }
    }
  />
</Tag>
`;

exports[`<TagUser /> should render correctly with other size 1`] = `
<Tag
  CustomImage={
    <Relay(Connect(UserAvatarLegacy))
      size={20}
      user={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "media": Object {
            "url": "url de l'image",
          },
        }
      }
    />
  }
  className="tagUser"
>
  <Relay(Connect(UserLink))
    user={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "media": Object {
          "url": "url de l'image",
        },
      }
    }
  />
</Tag>
`;
